[gd_scene load_steps=6 format=2]

[ext_resource path="res://Ejecutable/Juego/Escenarios/Potenciadores/P.2_Puntos/P.2_Puntos.gd" type="Script" id=1]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Sonidos/Audio_poteciador2.wav" type="AudioStream" id=2]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Potenciadores/P.2_Puntos/Modelo/Potenciador2.dae" type="PackedScene" id=3]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Potenciadores/P.2_Puntos/Modelo/images/ImagenPotenciador2.png" type="Texture" id=4]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 0.388291, 0.287826, 0.377371 )

[node name="P2_Puntos" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="AudioPotenciador2" type="AudioStreamPlayer3D" parent="." index="0"]

stream = ExtResource( 2 )
attenuation_model = 0
unit_db = 0.0
unit_size = 1.0
max_db = 3.0
pitch_scale = 1.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0

[node name="Scene Root" parent="." index="1" instance=ExtResource( 3 )]

transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Area" type="Area" parent="." index="2"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.355303, 0 )
shape = SubResource( 1 )
disabled = false

[node name="Hub_puntos" type="Node2D" parent="." index="3"]

[node name="Sprite" type="Sprite" parent="Hub_puntos" index="0"]

position = Vector2( 335.605, -56.9717 )
texture = ExtResource( 4 )
offset = Vector2( 20, 0 )
_sections_unfolded = [ "Offset" ]

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]


